# IMServer

./: .gitignore  README.md
01.Server/: CMakeLists.txt  main.cpp
01.Server/code/db/: chat_db.cpp  chat_db.h
01.Server/code/list/: chat_info_list.cpp  chat_info_list.h
01.Server/code/server/: server.cpp  server.h
02.Client/code/: ChatClient.pro  add_friend.cpp  add_friend.h  add_friend.ui  add_group.cpp  add_group.h  add_group.ui  chatlist.cpp  chatlist.h  chatlist.ui  create_group.cpp  create_group.h  create_group.ui  group_chat.cpp  group_chat.h  group_chat.ui  main.cpp  private_chat.cpp  private_chat.h  private_chat.ui  recvfile.cpp  recvfile.h  recvfile_thread.cpp  recvfile_thread.h  sendfile_thread.cpp  sendfile_thread.h  widget.cpp  widget.h  widget.ui
